[locationinfo] Add fake password fields to prevent autofill

--- a/modules-available/locationinfo/templates/server-settings.html
+++ b/modules-available/locationinfo/templates/server-settings.html
@@ -51,6 +51,8 @@
 		<input type="hidden" name="action" value="updateServerSettings">
 		<input type="hidden" name="id" value="{{id}}">
 		<input type="hidden" name="type" value="{{backendtype}}">
+		<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="position:absolute;top:-2000px" tabindex="-1">
+		<input type="password" name="password_fake" id="password_fake" value=""   style="position:absolute;top:-2000px" tabindex="-1">
 
 
 		<div class="panel panel-default">
