[weninterface] Improve color list a bit

--- a/modules-available/webinterface/templates/customization.html
+++ b/modules-available/webinterface/templates/customization.html
@@ -17,7 +17,7 @@
 					{{lang_logoBackground}}
 					<select class="form-control" name="bgcolor">
 						{{#colors}}
-							<option style="color:{{color}}" {{selected}}>{{color}}</option>
+							<option style="color:{{text}};background:{{color}}" {{selected}}>{{color}}</option>
 						{{/colors}}
 					</select>
 				</label>
