[js_stupidtable] changed one-line code to formatted code; modified to show sorting arrows on columns and different mouse cursor on hover

--- a/modules-available/permissionmanager/templates/locationstable.html
+++ b/modules-available/permissionmanager/templates/locationstable.html
@@ -12,7 +12,7 @@
 
 <div class="row">
 	<div class="col-md-12">
-		<table id="locationsTable" class="table table-condensed table-hover dataTable">
+		<table id="locationsTable" class="table table-condensed table-hover stupidtable dataTable">
 			<thead>
 				<tr>
 					<th data-sort="string">{{lang_Locations}}</th>
