--- a/modules-available/permissionmanager/templates/rolestable.html
+++ b/modules-available/permissionmanager/templates/rolestable.html
@@ -12,7 +12,7 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<table id="rolesTable" class="table table-condensed table-hover">
+			<table id="rolesTable" class="table table-condensed table-hover stupidtable">
 				<thead>
 					<tr>
 						<th data-sort="string">{{lang_Roles}}</th>
