--- a/modules-available/rebootcontrol/templates/_page.html
+++ b/modules-available/rebootcontrol/templates/_page.html
@@ -18,11 +18,11 @@
 	</div>
 	<div class="row">
 		<div class="col-md-12">
-			<table class="table table-condensed table-hover" id="dataTable">
+			<table class="table table-condensed table-hover stupidtable" id="dataTable">
 				<thead>
 					<tr>
 						<th data-sort="string">{{lang_client}}</th>
-						<th data-sort="ipsort">{{lang_ip}}</th>
+						<th data-sort="ipv4">{{lang_ip}}</th>
 						<th data-sort="string">{{lang_status}}</th>
 						<th data-sort="string">{{lang_session}}</th>
 						<th data-sort="string">{{lang_user}}</th>
