--- a/modules-available/rebootcontrol/templates/status.html
+++ b/modules-available/rebootcontrol/templates/status.html
@@ -10,11 +10,11 @@
 <div data-tm-id="{{taskId}}" data-tm-log="error" data-tm-callback="updateStatus"></div>
 
 <div>
-	<table class="table table-hover" id="dataTable">
+	<table class="table table-hover stupidtable" id="dataTable">
 		<thead>
 			<tr>
 				<th data-sort="string">{{lang_client}}</th>
-				<th data-sort="ipsort">{{lang_ip}}</th>
+				<th data-sort="ipv4">{{lang_ip}}</th>
 				<th data-sort="string">
 					{{lang_status}}
 				</th>
