--- a/modules-available/permissionmanager/templates/userstable.html
+++ b/modules-available/permissionmanager/templates/userstable.html
@@ -18,7 +18,7 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<table id="usersTable" class="table table-condensed table-hover dataTable">
+			<table id="usersTable" class="table table-condensed table-hover stupidtable dataTable">
 				<thead>
 					<tr>
 						<th data-sort="string">{{lang_Users}}</th>
@@ -60,7 +60,7 @@
 				<div class="modal-body">
 					<div class="row">
 						<div class="col-md-12 scrollingTable">
-							<table id="addRoleToUserTable" class="table table-condensed table-hover">
+							<table id="addRoleToUserTable" class="table table-condensed table-hover stupidtable">
 								<thead>
 									<tr>
 										<th data-sort="string">{{lang_Roles}}</th>
@@ -103,7 +103,7 @@
 				<div class="modal-body">
 					<div class="row">
 						<div class="col-md-12 scrollingTable">
-							<table id="removeRoleFromUserTable" class="table table-condensed table-hover">
+							<table id="removeRoleFromUserTable" class="table table-condensed table-hover stupidtable">
 								<thead>
 									<tr>
 										<th data-sort="string">{{lang_Roles}}</th>
