[vmstore] Fix broken NFS example config

--- a/modules-available/vmstore/templates/page-vmstore.html
+++ b/modules-available/vmstore/templates/page-vmstore.html
@@ -95,14 +95,14 @@
 				</p>
 				<pre>
 /mnt/images    1.2.3.4(rw,no_root_squash,async)
-/mnt/images    *(ro,async,nolock)
+/mnt/images    *(ro,async)
 				</pre>
 				<p>
 					{{lang_nfsHelp2}}
 				</p>
 				<pre>
-/mnt/images    1.2.3.4(rw,all_squash,anon_uid=1234,async)
-/mnt/images    *(ro,async,nolock)
+/mnt/images    1.2.3.4(rw,all_squash,anonuid=1234,async)
+/mnt/images    *(ro,async)
 				</pre>
 			</div>
 			<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a></div>
