[locationinfo] Location edit part done so far

--- a/modules-available/locationinfo/templates/ajax-config-location.html
+++ b/modules-available/locationinfo/templates/ajax-config-location.html
@@ -116,6 +116,20 @@
 	</div>
 </div>
 <div class="row">
+	<div class="col-sm-3"></div>
+	<div class="col-sm-7">
+		<div class="checkbox">
+			<input type="checkbox" name="recursive" id="recursive-check">
+			<label for="recursive-check">{{lang_recursiveServerSet}}</label>
+		</div>
+	</div>
+	<div class="col-sm-2">
+		<a class="btn btn-default helptext" title="{{lang_recursiveSetTooltip}}">
+			<span class="glyphicon glyphicon-question-sign"></span>
+		</a>
+	</div>
+</div>
+<div class="row">
 	<div class="col-sm-3">
 		{{lang_roomId}}
 	</div>
