[locationinfo] Make panel names links that open panel again

--- a/modules-available/locationinfo/templates/page-panels.html
+++ b/modules-available/locationinfo/templates/page-panels.html
@@ -19,7 +19,7 @@
 		{{#panels}}
 			<tr>
 				<td>
-					{{panelname}}
+					<a href="modules/locationinfo/frontend/doorsign.html?uuid={{paneluuid}}" target="_blank">{{panelname}}</a>
 				</td>
 				<td>
 					{{paneltype}}
