[runmode] Add isclient property per client, implement overview page

--- a/modules-available/runmode/templates/machine-selector.html
+++ b/modules-available/runmode/templates/machine-selector.html
@@ -14,6 +14,7 @@
 	<input type="hidden" name="action" value="save-mode">
 	<input type="hidden" name="module" value="{{module}}" id="i-module">
 	<input type="hidden" name="modeid" value="{{modeid}}" id="i-modeid">
+	<input type="hidden" name="redirect" value="{{redirect}}">
 	<select id="machine-sel" name="machines[]" multiple>
 	</select>
 	<div class="buttonbar">
